# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: calc.py  db.py  main.py
src/GUI/: GUIMain.py  coursedisp.py
