[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["KyperCT <38316792+KyperCT@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
